// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen scripts config import-export] should create the scripts: the scripts have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ script [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen scripts config import-export] should skip the same scripts: the scripts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= script [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen scripts config import-export] should throw exception when new scripts to import miss mandatory properties scripts: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - script [Environment/emptyCfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen scripts config import-export] should throw exception when updating scripts with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - script [Environment/cfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen scripts config import-export] should update the modified scripts: the modified scripts have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ script [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
